<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Squash Squash</string>
    <string name="menu_settings">Settings</string>
    
    <string name="background">Background</string>
    <string name="title">Squash Squash</string>
    
    <string name="new_game">New Game</string>
    <string name="options">Options</string>
    <string name="instructions">Instructions</string>
    <string name="exit">Exit</string>
    
    <string name="bad_chibis">Bad Chibis</string>
    <string name="good_chibis">Good Chibis</string>
    
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="sfx">Sound Effects</string>
    
    <string name="score_title">Score:</string>
    <string name="time_title">Time:</string>
    
    
    
    
    <!-- INSTRUCTIONS -->
    <string name="info1">Squash-squash the evil demons: </string>
    <string name="info2">Do it before your time is up!</string>
    <string name="info3">Do not squash the innocent humans:</string>
 	<string name="info4">The humankind depends on you.</string>
 	<string name="info5">Good luck!</string>
 	
 	
 
 	<!-- END GAME -->
 	<string name="win1">Congratulations, you did\nsquash-squash all demons!</string>
 	<string name="win2">You saved the humankind in</string>
 	<string name="win3">Wow!</string>
 	
 	<string name="loss1">Eh&#8230; You did it on purpose, didn\'t you?</string>
 	<string name="loss2">You destroyed the humankind in</string>
 	<string name="loss3">Eh&#8230; </string>
 	
 	<string name="time_up1">Sorry, your time is up! </string>
 	<string name="time_up2">You got </string>
 	<string name="time_up3">and the demons busted you! </string>
 	
 	<string name="seconds">seconds</string>
 	<string name="and_you_got">and you got</string>
 	<string name="points">points</string>
 	<string name="confirm">Are you sure?</string>
 	
 	
 	<!-- HIGH SCORES -->
 	<string name="hs_title">high scores</string>
 	<string name="hs_points">points</string>
 	<string name="hs_difficulty">difficulty</string>
 	<string name="hs_easy">easy</string>
 	<string name="hs_medium">medium</string>
 	<string name="hs_hard">hard</string>

 	
 	<!-- OPTIONS -->
  	<string name="opt_easy">easy</string>
 	<string name="opt_medium">medium</string>
 	<string name="opt_hard">hard</string>
 	<string name="opt_sound">sound</string>
 	
</resources>