<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">

    <ImageView
        style="@style/InfoPadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:padding="5dip"
        android:src="@drawable/parch_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/winText1"
            style="@style/InfoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/win1"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/winText2"
            style="@style/InfoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/win2"
            android:textColor="@color/Black" />

        <!-- THE TIME LINE  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dip">

            <TextView
                android:id="@+id/timeValueWin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/Black" 
                android:paddingRight="5dip"/>

            <TextView
                android:id="@+id/secondsWin"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:layout_weight="1"
                android:textColor="@color/Black" />
        </LinearLayout>

        <!-- THE SCORE LINE  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dip">
			
            <TextView
                android:id="@+id/gotWin"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/and_you_got"
                android:layout_weight="1"
                android:paddingRight="5dip"
                android:textColor="@color/Black" />
            
            <TextView
                android:id="@+id/scoreValueWin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/Black" 
                android:paddingRight="5dip"/>

            <TextView
                android:id="@+id/pointsWin"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:layout_weight="1"
                android:textColor="@color/Black" />
        </LinearLayout>
        
        
        <TextView
            android:id="@+id/winText3"
            style="@style/InfoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/win3"
            android:textColor="@color/Black" />

        <ImageView
            android:id="@+id/backInfoButton"
            style="@style/InfoPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:src="@drawable/back" />
    </LinearLayout>
</RelativeLayout>


