<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity" >

    <!-- The bar with the time, score, sound, pause -->

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/parch2_bg"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="15dip" >

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dip"
            android:paddingTop="5dip"
            android:text="@string/time_title" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="30dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="5dip" />

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dip"
            android:paddingTop="5dip"
            android:text="@string/score_title" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingTop="5dip" />

        <ImageButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/exit"
            android:enabled="true"
            android:onClick="onClickExit"
            android:padding="5dip"
            android:src="@drawable/back"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/pause"
            android:enabled="true"
            android:onClick="onClickPause"
            android:padding="5dip"
            android:src="@drawable/pause"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <!-- The actual game view -->

        <com.petrovdevelopment.squashsquash.GameView
            android:id="@+id/game_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/play"
            android:enabled="true"
            android:onClick="onClickPlay"
            android:padding="5dip"
            android:src="@drawable/play" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            layout="@layout/sound_bar_layout" />
    </RelativeLayout>

</LinearLayout>